--- a/styling page.css
+++ b/styling page.css
@@ -1,6 +1,6 @@
 body{
 
-    background-image: url(https://i.pinimg.com/originals/da/42/64/da4264a33bbcfcd56d3cb80e26430518.png);
+    background-image: url(https://github.com/shivani2424/port/blob/main/bck%20img.png?raw=true);
     background-color: rgba(231, 148, 220, 0.233);
     color:black
 }
